--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -6,5 +6,8 @@
   </head>
   <body>
     <h1>Robot World Dash</h1>
+    <ul>
+      <li><a href="http://localhost:9393/robots">Robot Index</a></li>
+    </ul>
   </body>
 </html>
