CRUD fully functional. Ugly design though

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,4 +4,9 @@
   <h3><a href="/robots/<%= robot.id %>"><%= robot.name %></a></h3>
   <p><%= robot.city + ", " + robot.state %></p>
   <p><%= robot.department%></p>
+  <a href="/robots/<%= robot.id %>/edit">Edit</a>
+  <form action="/robots/<%= robot.id %>" method="POST">
+    <input type="hidden" name="_method" value="DELETE">
+    <input type="submit" value="delete"/>
+  </form>
 <% end %>
