--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,6 +5,15 @@
     <title>Robot World</title>
   </head>
   <body>
+    <nav>
+    <a href='/' class="logo-text">Robot World</a>
+    <ul class ="nav-links">
+      <a href = "/robots/new">Create a New Robot</a>
+      <a href = "/robots">Robots</a>
+      <a href = "regions.html">Regions</a>
+      <a href = "account.html">Account</a>
+    </ul>
+  </nav>
     <%= yield %>
   </body>
 </html>
