--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -2,6 +2,8 @@
 
 <h1><%= @robot.name %></h1>
 
+<img src="/<%= @robot.headshot %>">
+
 <p><%= @robot.city %></p>
 <p><%= @robot.state %></p>
 <p><%= @robot.department %></p>
